--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,11 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "helmet": "^7.0.0",
+    "compression": "^1.7.4",
+    "morgan": "^1.10.0",
+    "express-rate-limit": "^6.8.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
